src/main/webapp/css/imcms-editor_area.css
.imcms-editor-area {
    background-color: white;
    border: 2px solid #f2f2fc;
    border-radius: 5px;
    -webkit-box-shadow: 0 0 18px 1px rgba(0, 0, 0, 0.07);
    -moz-box-shadow: 0 0 18px 1px rgba(0, 0, 0, 0.07);
    box-shadow: 0 0 18px 1px rgba(0, 0, 0, 0.07);
    display: inline-block;
    padding: 10px 25px 10px 10px;
    position: relative;
    width: 100%;
}

.imcms-editor-area__text-label {
    width: calc(100% + 4px);
    background-color: white;
    display: none;
    position: absolute;
    bottom: calc(100% - 2px);
    left: -2px;
    padding: 3px 10px;
    border: 2px solid rgba(0, 149, 217, 0.58);
    border-bottom-width: 1px;
    border-radius: 5px 5px 0 0;
}

.imcms-editor-area--text:hover .imcms-editor-area__text-label {
    display: block;
}

.imcms-editor-area--text.imcms-editor-area--active .imcms-editor-area__text-label {
    display: none;
}

.imcms-editor-area__text-toolbar {
    background-color: white;
    width: 100%;
    position: absolute;
    bottom: calc(100% - 2px);
    left: -2px;
}

.imcms-editor-area--active,
.imcms-editor-area:hover {
    z-index: 999;
    border: 2px solid rgba(0, 149, 217, 0.58);
}

.imcms-editor-area--image {
    width: auto;
}

.imcms-editor-area__content-wrap,
.imcms-editor-area__content {
    width: 100%;
    display: inline-block;
}

.imcms-editor-area__control-wrap {
    position: absolute;
    top: 5px;
    right: 5px;
}

.imcms-editor-area__control-edit {
    display: none;
    float: right;
}

.imcms-editor-area__control-title {
    padding: 15px 5px;
    background: #2e3f47;
    border-radius: 5px;
    color: #ffffff;
    font-size: 14px;
    font-weight: 400;
    line-height: 20px;
    text-align: center;
    display: none;
    position: absolute;
    top: -47px;
    left: -46px;
    width: 130px;
    z-index: 25;
}

.imcms-editor-area__control-title:before {
    content: '';
    background: #2e3f47;
    display: block;
    position: absolute;
    bottom: -5px;
    left: 51px;
    width: 10px;
    height: 10px;
    -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    -o-transform: rotate(45deg);
    transform: rotate(45deg);
}

.imcms-editor-area__control-title--top:before {
    bottom: auto;
    top: -5px;
}

.imcms-editor-area__control-title--right:before {
    left: auto;
    right: 5px;
}

.imcms-editor-area__control-title--left:before {
    right: auto;
    left: 5px;
}

.imcms-editor-area--text .imcms-image-in-text {
    border-radius: 5px;
    padding: 5px 26px 5px 5px;
    border: 2px solid transparent;
}

.imcms-editor-area--text .imcms-image-in-text:hover {
    border-color: rgba(0, 149, 217, 0.58);
}

.imcms-image-in-text {
    position: relative;
    padding-right: 26px;
}

.imcms-image-in-text .imcms-editor-content {
    display: inline-block;
}

.imcms-editor-area--text:hover .imcms-editor-area__control-edit,
.imcms-editor-area--active .imcms-editor-area__control-edit {
    display: block;
}

